post-stratification distributions from ASR

--- a/output/.gitignore
+++ b/output/.gitignore
@@ -1,1 +1,5 @@
 RMS indicator tables_Georgia 2022_20220707.xlsx
+nationality.xlsx
+age_sex.xlsx
+RMS indicator tables_Georgia 2022_20220715.xlsx
+RMS indicator tables_Georgia 2022.xlsx
